--- a/streamlit.ipynb
+++ b/streamlit.ipynb
@@ -130,14 +130,13 @@
     "    slt.markdown(\"MySQL: Using MySQL for database integration and storage...\")\n",
     "    slt.subheader(\":blue[Skill-take:]\")\n",
     "    slt.markdown(\"Selenium, Python, Pandas, MySQL, mysql-connector-python, Streamlit.\")\n",
-    "    slt.subheader(\":blue[Developed-by:]  Kavitha Thangavel\")\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "# States and Routes page setting\n",
     "if web == \"📍States and Routes\":\n",
     "    S = slt.selectbox(\n",
     "        \"Lists of States\",\n",
-    "        [\"Kerala\", \"Andhra Pradesh\", \"Telangana\", \"Goa\", \"Rajasthan\", \"South Bengal\", \"Haryana\", \"Assam\", \"Uttar Pradesh\", \"West Bengal\"]\n",
+    "        [\"Kerala\", \"Andhra \", \"Telangana\", \"kadamba\", \"Rajasthan\", \"southbengal\", \"Himachal\",\"westbengal\",\"Uttar Pradesh\", \"West Bengal\"]\n",
     "    )\n",
     "\n",
     "    col1, col2 = slt.columns(2)\n",
